--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Chatbot</title>
+    <title>Prep-Portal Chatbot</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="dark-mode">
     <div class="app-container">
         <div class="sidebar" id="sidebar">
             <div class="sidebar-header">
                 <h3 style="color: var(--text); margin: 0; font-size: 1.1em;">Chat History</h3>
-                <button class="theme-toggle" id="themeToggle" title="Toggle theme">☀️</button>
+                <button class="theme-toggle" id="themeToggle" title="Toggle theme"><i class="fas fa-sun"></i></button>
             </div>
             <div class="sidebar-content">
                 <button class="new-chat-btn" id="newChatBtn">
-                    + New chat
+                    <i class="fas fa-plus"></i> New chat
                 </button>
+                <div class="chat-history" id="chatHistoryEl">
+                    <!-- Chat history will be populated here -->
+                </div>
+                <div class="about-section">
+                    <div class="about-content">
+                        Prep-Portal Chatbot v1.0<br>
+                        A simple AI assistant interface
+                    </div>
+                    <div class="developer-info">
+                        <span>Developed by</span>
+                        <a href="https://www.linkedin.com/in/rinku-gupta-384b07283?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                            target="_blank" title="View developer's LinkedIn">
+                            <i class="fab fa-linkedin linkedin-icon"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main">
+            <div id="chatbox">
+                <!-- Welcome message or chats here -->
+            </div>
+            <div class="input-area-wrapper">
+                <div class="input-area">
+                    <textarea id="userInput" placeholder="Type your message..." autocomplete="off" rows="1"></textarea>
+                    <button id="sendButton" title="Send"><i class="fas fa-paper-plane"></i></button>
+                </div>
                 <div class="save-toggle">
                     <span>Save to history</span>
                     <label class="toggle-switch">
@@ -24,27 +54,11 @@
                         <span class="slider"></span>
                     </label>
                 </div>
-                <div class="chat-history" id="chatHistory">
-                    <!-- Chat history will be populated here -->
-                </div>
             </div>
         </div>
-        <div class="main">
-            <div id="chatbox">
-                <div class="welcome-message">
-                    <h2>Welcome to Gemini</h2>
-                    <p>Start a new chat or select from your history</p>
-                    <p>Ask me anything!</p>
-                </div>
-            </div>
-            <div class="input-area">
-                <textarea id="userInput" placeholder="Type your message..." autocomplete="off" rows="1"></textarea>
-                <button id="sendButton">Send</button>
-            </div>
-        </div>
-        <button class="mobile-menu-btn" id="mobileMenuBtn">☰</button>
+        <button class="mobile-menu-btn" id="mobileMenuBtn" title="Toggle menu"><i class="fas fa-bars"></i></button>
     </div>
- <script src="script.js"></script>
-    
+
+    <script src="script.js"></script>
 </body>
 </html>
