--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prep-Portal Chatbot</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body class="dark-mode">
@@ -21,7 +21,7 @@
                     <i class="fas fa-plus"></i> New chat
                 </button>
                 <div class="chat-history" id="chatHistoryEl">
-                    <!-- Chat history will be populated here -->
+                    <!-- Chat history populated by JS -->
                 </div>
                 <div class="about-section">
                     <div class="about-content">
@@ -29,10 +29,10 @@
                         A simple AI assistant interface
                     </div>
                     <div class="developer-info">
-                        <span>Developed by</span>
+                        <span>Developed by </span>
                         <a href="https://www.linkedin.com/in/rinku-gupta-384b07283?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                             target="_blank" title="View developer's LinkedIn">
-                            <i class="fab fa-linkedin linkedin-icon"></i>
+                            <i class="fab fa-linkedin linkedin-icon"></i> 
                         </a>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="main">
             <div id="chatbox">
-                <!-- Welcome message or chats here -->
+                <!-- Welcome message or chats populated by JS -->
             </div>
             <div class="input-area-wrapper">
                 <div class="input-area">
